--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
+    "@angular/localize": "^16.2.10",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
@@ -25,6 +26,7 @@
     "ionicons": "^7.0.0",
     "json-server": "^0.17.3",
     "rxjs": "~7.8.0",
+    "swiper": "^10.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
