--- a/package.json
+++ b/package.json
@@ -13,34 +13,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
+    "@angular/animations": "^16.2.10",
+    "@angular/common": "^16.2.10",
+    "@angular/compiler": "^16.2.10",
+    "@angular/core": "^16.2.10",
+    "@angular/forms": "^16.2.10",
     "@angular/localize": "^16.2.10",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/platform-browser": "^16.2.10",
+    "@angular/platform-browser-dynamic": "^16.2.10",
+    "@angular/router": "^16.2.10",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
     "json-server": "^0.17.3",
+    "jwt-decode": "^4.0.0",
+    "primeng": "^16.4.2",
     "rxjs": "~7.8.0",
     "swiper": "^10.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0",
-    "@angular-eslint/builder": "^16.0.0",
-    "@angular-eslint/eslint-plugin": "^16.0.0",
-    "@angular-eslint/eslint-plugin-template": "^16.0.0",
-    "@angular-eslint/schematics": "^16.0.0",
-    "@angular-eslint/template-parser": "^16.0.0",
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
-    "@angular/language-service": "^16.0.0",
+    "@angular-devkit/build-angular": "^16.2.10",
+    "@angular-eslint/builder": "^16.2.10",
+    "@angular-eslint/eslint-plugin": "^16.2.10",
+    "@angular-eslint/eslint-plugin-template": "^16.2.10",
+    "@angular-eslint/schematics": "^16.2.10",
+    "@angular-eslint/template-parser": "^16.2.10",
+    "@angular/cli": "^16.2.10",
+    "@angular/compiler": "^16.2.10",
+    "@angular/compiler-cli": "^16.2.10",
+    "@angular/language-service": "^16.2.10",
     "@ionic/angular-toolkit": "^9.0.0",
     "@ionic/lab": "3.2.15",
     "@types/jasmine": "~4.3.0",
