--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
     "json-server": "^0.17.3",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~7.8.0",
     "swiper": "^10.3.1",
     "tslib": "^2.3.0",
